chores: added icon,modified metadata and refactored Outputs of tasks